# curve-my-triangle

./: .gitignore  CMakeLists.txt  README.md
rapport/: .rapport.tex.kate-swp  rapport.aux  rapport.tex  rapport.toc
src/: CMakeLists.txt  main.cpp
